plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '1.13.3'
    id "org.datlowe.maven-publish-auth" version "2.0.2"
    id 'me.qoomon.git-versioning' version '1.2.3'
}

apply plugin: 'java'
apply plugin: 'org.jetbrains.intellij'

group 'com.datasonnet'
version '3.0.2'

sourceCompatibility = 17

sourceSets {
    main {
        java {
            srcDir 'src/main/gen'
            srcDir 'src/main/java'
        }
    }
}

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        name "portx-repository-snapshots"
        url "https://portx.jfrog.io/portx/portx-snapshots"
        mavenContent {
            snapshotsOnly()
        }
    }
    maven {
        name "portx-repository-releases"
        url "https://portx.jfrog.io/portx/portx-releases"
        mavenContent {
            releasesOnly()
        }
    }
}

dependencies {
    testImplementation group: 'junit', name: 'junit', version: '4.12'
    implementation group: 'com.datasonnet', name: 'datasonnet-mapper', version: '3.0.0-RC1'
    implementation group: 'io.github.classgraph', name: 'classgraph', version: '4.8.147'
}
/*
configurations.implementation {
    exclude group: 'org.slf4j'
}
 */

gitVersioning {
    branch {
        pattern = 'master'
        versionFormat = '${version}'
    }
    branch {
        pattern = '(?<feature>.+)'
        versionFormat = '${version.release}-${feature}-SNAPSHOT'
    }
    tag {
        pattern = 'v(?<tagVersion>[0-9].*)'
        versionFormat = '${tagVersion}'
    }
    commit {
        versionFormat = '${version.release}-commit-${commit.short}-SNAPSHOT'
    }
}

intellij {
    version = ideaVersion
    downloadSources = true
    type = project.hasProperty('intellij_type') ? project.intellij_type : 'IC'
    plugins = ['java']
}
// patchPluginXml {
//     changeNotes """
//       Add change notes here.<br>
//       <em>most HTML tags may be used</em>"""
// }
patchPluginXml {
    sinceBuild = "232"
    untilBuild = "250.*"
}